# cs4775-final-project

./: .gitignore  README.md  pyproject.toml
data/alignments/: RF00058_0.sto  RF00058_1.sto  RF00058_2.sto  RF00060_0.sto  RF00062_0.sto  RF00062_1.sto  RF00062_2.sto  RF00062_3.sto  RF00062_4.sto  RF00225_0.sto  RF00236_0.sto  RF00236_1.sto  RF00236_2.sto  RF00236_3.sto  RF00236_4.sto  RF00366_0.sto  RF00366_1.sto  RF00366_2.sto  RF00366_3.sto  RF00366_4.sto  RF00470_0.sto  RF00768_0.sto  RF00768_1.sto  RF00768_2.sto  RF00768_3.sto  RF00768_4.sto  RF00774_0.sto  RF00774_1.sto  RF00774_2.sto  RF00774_3.sto  RF00774_4.sto  RF00820_0.sto  RF00820_1.sto  RF00820_2.sto  RF00820_3.sto  RF00820_4.sto  RF00847_0.sto  RF00847_1.sto  RF00847_2.sto  RF00847_3.sto  (+508 more)
data/fasta/: RF00058_0.fa  RF00058_1.fa  RF00058_2.fa  RF00060_0.fa  RF00062_0.fa  RF00062_1.fa  RF00062_2.fa  RF00062_3.fa  RF00062_4.fa  RF00225_0.fa  RF00236_0.fa  RF00236_1.fa  RF00236_2.fa  RF00236_3.fa  RF00236_4.fa  RF00366_0.fa  (+532 more)
report/: final.bib  final_ref.bst  main.aux  main.bbl  main.out  main.tex  outline.md  supplement.tex  wlscirep.cls  wlscirep_sup.cls
results/: gamma.csv
scripts/: constants.py  download_rfam_pairs.py  estimate_parameters.py  evaluate_alignments.py  plot_confidence_intervals.py  plot_family_performance.py  plot_jackknife_f1.py  plot_metrics.py  plot_posterior_gain.py  plot_posteriors.py  read.py  run_demo.py  run_viterbi_demo.py  workflow.py
src/: __init__.py  a2_hmm.py
tests/: __init__.py  test_forward_backward.py  test_forward_backward_skeleton.py  test_hmm.py  test_mea.py
(+58 files in other folders)
